--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
                     <div class="topic">ANIMAL</div>
                     <div class="des">
                         <!-- lorem 50 -->
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima
+                        placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et
+                        quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at
+                        laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -138,7 +141,10 @@
                     <div class="title">DESIGN SLIDER</div>
                     <div class="topic">ANIMAL</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima
+                        placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et
+                        quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at
+                        laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -153,7 +159,10 @@
                     <div class="title">DESIGN SLIDER</div>
                     <div class="topic">ANIMAL</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima
+                        placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et
+                        quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at
+                        laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -168,7 +177,10 @@
                     <div class="title">DESIGN SLIDER</div>
                     <div class="topic">ANIMAL</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima
+                        placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et
+                        quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at
+                        laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -227,8 +239,9 @@
         <!-- next prev -->
 
         <div class="arrows">
-            <button id="prev"><</button>
-            <button id="next">></button>
+            <button id="prev">
+                << /button>
+                    <button id="next">></button>
         </div>
         <!-- time running -->
         <div class="time"></div>
@@ -240,8 +253,10 @@
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">About Us</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">About</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">
+                            Mtendere Education Consultancy
+                        </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
@@ -282,9 +297,8 @@
                         achieve their dreams.
                     </p>
                     <p>
-                        By offering comprehensive, personalized guidance to students from around the world, Mtendere
-                        aims to empower individuals to make informed decisions about their future and to contribute to
-                        the success of their families.
+                        By offering 200 children international scholarships, Mtendere aims to empower individuals to
+                        make informed decisions about their future and to contribute to the success of their families.
                     </p>
                 </div>
 
@@ -296,9 +310,9 @@
                         achieve their dreams.
                     </p>
                     <p>
-                        By offering comprehensive, personalized guidance to students from around the world, Mtendere
-                        aims to empower individuals to make informed decisions about their future and to contribute to
-                        the success of their families.
+                        We Build and intergrate our core values in our daily operations and services to ensure that we
+                        provide students with the best possible support and resources to achieve their academic and
+                        professional goals.
                     </p>
                 </div>
 
@@ -316,7 +330,7 @@
                     </p>
                 </div>
                 <div class="col-md-12">
-                    <a href="contact.html" class="btn btn-primary">Contact Us</a>
+                    <a href="contact.html" class="get-started">Contact Us</a>
                     <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
                         students achieve their dreams and achieve success in their education.</p>
                 </div>
@@ -388,11 +402,12 @@
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
                         <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Services</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Progress is a sign of Success
+                        </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
+                                class="fa fa-work" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -433,7 +448,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <a href="contact.html" class="btn btn-primary">Contact Us</a>
+                    <a href="contact.html" class="get-started">Contact Us</a>
                     <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
                         students achieve their dreams and achieve success in their education.</p>
                 </div>
@@ -448,11 +463,11 @@
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
                         <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Take Test</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Eligibility Test </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="eligibility.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
+                                class="fa fa-notebook" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -460,13 +475,77 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <a href="eligibility-test.html" class="btn btn-primary">Take Eligibility Test</a>
-                    <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
-                        students achieve their dreams and achieve success in their education.</p>
+                    <p class="mt-4">
+                        Click "test" button to take eligibility test which will help us know your best interest and help
+                        you apply for the best universities.
+
+                        Your test will examined by our professionals and you will be given the best universities that
+                        match your criteria in your email box.
+                        <br>
+                        <span>Good Luck!</span>
+                    </p>
+                    <a href="eligibility-test.html" class="btn btn-primary">Test</a>
+                    <p class="mt-4">
+                        We're here to help you find the perfect university for your specific needs and interests. Our
+                        eligibility test search engine allows you to easily find universities that match your criteria
+                        and apply
+                        for them.
+                    </p>
                 </div>
             </div>
         </div>
+    </section>
 
+    <!--- Testimonials Section --->
+    <section id="testimonials" class="padd-section">
+        <div class="container">
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials
+                        </h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">What Our Students Say.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" style="background-color: black;">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="testimonial-box">
+                                        <img src="img/testimonial-1.jpg" alt="img">
+                                        <h3>John Doe</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
+                                            metus, in ultricies
+                                            est consectetur.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="testimonial-box">
+                                        <img src="img/testimonial-2.jpg" alt="img">
+                                        <h3>Jane Doe</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
+                                            metus, in ultricies
+                                            est consectetur.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="testimonial-box">
+                                        <img src="img/testimonial-3.jpg" alt="img">
+                                        <h3>John Smith</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
+                                            metus, in ultricies
+                                            est consectetur.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <!--- Scholarships and Universities --->
@@ -475,34 +554,75 @@
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Univesities &
-                            Scholarships</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Universities
+                        </h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Scholarships From our Partners
+                        </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i>
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">
+                            View All <i class="fas fa-university"></i>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+
+        <div class="container" <div class="row mb-4">
             <div class="col-md-6">
-                <h3>Scholarships</h3>
-                <p>
-                    We help you find the perfect scholarships for your specific needs and interests. Our scholarship
-                    search engine allows you to easily find scholarships that match your criteria and apply for them.
-                </p>
-                <a href="scholarships.html" class="btn btn-primary">View Scholarships</a>
+                <input type="text" class="form-control" id="searchInput" placeholder="Search universities...">
             </div>
             <div class="col-md-6">
-                <h3>Universities</h3>
-                <p>
-                    We help you find the perfect universities for your specific needs and interests. Our university
-                    search engine allows you to easily find universities that match your criteria and apply for them.
-                </p>
-                <a href="universities.html" class="btn btn-primary">View Universities</a>
+                <select class="form-select" id="filterSelect">
+                    <option value="">All Countries</option>
+                    <option value="UK">UK</option>
+                    <option value="USA">USA</option>
+                    <option value="Canada">Canada</option>
+                </select>
+            </div>
+        </div>
+        <div class="row scholarship-slider">
+            <div class="col-md-4">
+                <div class="card scholarship-box h-100">
+                    <img src="img/scholarship-1.jpg" class="card-img-top" alt="University of Oxford">
+                    <div class="card-body">
+                        <h3 class="card-title"><i class="fas fa-landmark"></i> University of Oxford</h3>
+                        <p class="card-text">World-renowned university offering prestigious scholarships for
+                            international students.</p>
+                        <a href="#" class="btn btn-primary">Apply Now</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Location: UK</small>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card scholarship-box h-100">
+                        <img src="img/scholarship-2.jpg" class="card-img-top" alt="Harvard University">
+                        <div class="card-body">
+                            <h3 class="card-title"><i class="fas fa-university"></i> Harvard University</h3>
+                            <p class="card-text">Ivy League institution with extensive financial aid options for
+                                qualified applicants.</p>
+                            <a href="#" class="btn btn-primary">Apply Now</a>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Location: USA</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card scholarship-box h-100">
+                        <img src="img/scholarship-3.jpg" class="card-img-top" alt="Stanford University">
+                        <div class="card-body">
+                            <h3 class="card-title"><i class="fas fa-graduation-cap"></i> Stanford University</h3>
+                            <p class="card-text">Leading research university offering full-ride scholarships to
+                                exceptional students.</p>
+                            <a href="#" class="btn btn-primary">Apply Now</a>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Location: USA</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
