--- a/index.html
+++ b/index.html
@@ -685,12 +685,8 @@
             <div class="pb-5">
                 <div class="row g-4 align-items-end">
                     <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contact Us</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
-                    </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contact us</h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Want To Know More? </h1>
                     </div>
                 </div>
             </div>
@@ -721,20 +717,16 @@
 
     <!--Testimonials Section-->
     <section id="section" class="padd-section text-center wow fadeInUp">
-        <div class="container">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials
-                        </h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
-                    </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="testimonial.html">View All <i
-                                class="fa fa-rating" aria-hidden="true"></i></a>
-                    </div>
+        <div class="pb-5">
+            <div class="row g-4 align-items-end">
+                <div class="col-xl-8">
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials
+                    </h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">What Our Partners say? </h1>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="testimonials-content">
@@ -797,19 +789,16 @@
 
     <!-- Training Start -->
     <div class="container-fluid training py-5">
-        <div class="container py-5">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
-                    </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
-                    </div>
+        <div class="pb-5">
+            <div class="row g-4 align-items-end">
+                <div class="col-xl-8">
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events
+                    </h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Introducing You To Our Orientations, Tutor and Career Speech </h1>
                 </div>
             </div>
+        </div>
+        <div class="container py-5">
             <div class="training-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
                     <div class="training-img rounded-top">
