--- a/index.html
+++ b/index.html
@@ -409,9 +409,11 @@
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
-                        <i class="fa fa-book"></i>
-                        <h3>Curriculum Development</h3>
-                        <p>We help you develop the best curriculum for your specific needs and interests.</p>
+                        <div class="service-card">
+                            <i class="fa fa-book"></i>
+                            <h3>Curriculum Development</h3>
+                            <p>We help you develop the best curriculum for your specific needs and interests.</p>
+                        </div>
                     </div>
                 </div>
             </div>
