--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
                     <div class="border bg-secondary rounded">
-                        <img src="images/blog-3.jpg" class="img-fluid w-100 rounded" alt="Image">
+                        <img src="img/Malawian Students on Campus at Chandigarh University.JPG" class="img-fluid w-100 rounded" alt="Image">
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
@@ -402,9 +402,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="service-box">
-                        <i class="fa fa-graduation-cap"></i>
-                        <h3>Admissions</h3>
-                        <p>We help you find the perfect university for your specific needs and interests.</p>
+                        <div class="service-card">
+                            <i class="fa fa-book"></i>
+                            <h3>Admissions</h3>
+                            <p>We help you find the perfect university for your specific needs and interests.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -420,27 +422,22 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="service-box">
-                        <i class="fa fa-user-md"></i>
-                        <h3>Advisors and Tutors</h3>
-                        <p>We help you find the best advisors and tutors for your specific needs and interests.</p>
+                        <div class="service-card">
+                            <i class="fa fa-book"></i>
+                            <h3>Advisors and Tutors</h3>
+                            <p>We help you find the best advisors and tutors for your specific needs and interests.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
-                        <i class="fa fa-medkit"></i>
-                        <h3>Health and Wellness</h3>
-                        <p>We help you develop the best health and wellness programs for your specific needs and
-                            interests.</p>
+                        <div class="service-card">
+                            <i class="fa fa-book"></i>
+                            <h3>Health and Wellness</h3>
+                            <p>We help you develop the best health and wellness programs for your specific needs and
+                                interests.</p>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <a href="contact.html" class="get-started">Contact Us</a>
-                    <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
-                        students achieve their dreams and achieve success in their education.</p>
                 </div>
             </div>
         </div>
@@ -761,13 +758,6 @@
                                         <h4>Australia</h4>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="btm-btm">
-                                <ul class="list-unstyled carousel-indicators">
-                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
