--- a/index.html
+++ b/index.html
@@ -383,6 +383,23 @@
     </div>
     <!-- Counter Facts End -->
 
+    <!-- Video Section -->
+
+    <section id="video" class="text-center wow fadeInUp">
+        <div class="overlay">
+            <div class="container-fluid container-full">
+                <div class="row">
+                    <a href="#" class="js-modal-btn play-btn" data-video-id="s22ViV7tBKE"></a>
+                    <div class="col-md-12">
+                        <p class="text-white" style="font-size: 20px; font-weight: 700;">Discover the incredible world
+                            of International education.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END Video Section -->
+
     <!-- Services Section -->
     <section id="services" class="padd-section">
         <div class="container">
@@ -782,7 +799,7 @@
             <div class="training-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
                     <div class="training-img rounded-top">
-                        <img src="img/service-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
                             style="top: 0; left: 0;">01</h1>
                     </div>
@@ -795,7 +812,7 @@
                 </div>
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.3s">
                     <div class="training-img rounded-top">
-                        <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
                             style="top: 0; left: 0;">02</h1>
                     </div>
@@ -808,7 +825,7 @@
                 </div>
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.5s">
                     <div class="training-img rounded-top">
-                        <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <img src="img/blog-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
                             style="top: 0; left: 0;">03</h1>
                     </div>
@@ -821,7 +838,7 @@
                 </div>
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.7s">
                     <div class="training-img rounded-top">
-                        <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
                             style="top: 0; left: 0;">04</h1>
                     </div>
@@ -834,7 +851,7 @@
                 </div>
                 <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.9s">
                     <div class="training-img rounded-top">
-                        <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                        <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
                             style="top: 0; left: 0;">05</h1>
                     </div>
@@ -850,22 +867,7 @@
     </div>
     <!-- Training End -->
 
-    <!-- Video Section -->
-
-    <section id="video" class="text-center wow fadeInUp">
-        <div class="overlay">
-            <div class="container-fluid container-full">
-                <div class="row">
-                    <a href="#" class="js-modal-btn play-btn" data-video-id="s22ViV7tBKE"></a>
-                    <div class="col-md-12">
-                        <p class="text-white" style="font-size: 20px; font-weight: 700;">Discover the incredible world
-                            of International education.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END Video Section -->
+    
 
 
     <!-- Footer -->
