--- a/index.html
+++ b/index.html
@@ -411,8 +411,7 @@
                         </h1>
                     </div>
                     <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-work" aria-hidden="true"></i></a>
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i class="fa fa-work" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -469,10 +468,7 @@
                         <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Take Test</h4>
                         <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Eligibility Test </h1>
                     </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="eligibility.html">View All <i
-                                class="fa fa-notebook" aria-hidden="true"></i></a>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -489,12 +485,6 @@
                         <span>Good Luck!</span>
                     </p>
                     <a href="eligibility-test.html" class="btn btn-primary">Test</a>
-                    <p class="mt-4">
-                        We're here to help you find the perfect university for your specific needs and interests. Our
-                        eligibility test search engine allows you to easily find universities that match your criteria
-                        and apply
-                        for them.
-                    </p>
                 </div>
             </div>
         </div>
@@ -513,40 +503,22 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" style="background-color: black;">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="testimonial-box">
-                                        <img src="img/testimonial-1.jpg" alt="img">
-                                        <h3>John Doe</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
-                                            metus, in ultricies
-                                            est consectetur.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="testimonial-box">
-                                        <img src="img/testimonial-2.jpg" alt="img">
-                                        <h3>Jane Doe</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
-                                            metus, in ultricies
-                                            est consectetur.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="testimonial-box">
-                                        <img src="img/testimonial-3.jpg" alt="img">
-                                        <h3>John Smith</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus
-                                            metus, in ultricies
-                                            est consectetur.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="container">
+                <div class="testimonial-carousel owl-carousel">
+                    <div class="testimonial-item">
+                        <img src="img/testimonial-1.jpg" alt="Testimonial 1">
+                        <h3>John Doe</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in ultricies est consectetur.</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="img/testimonial-2.jpg" alt="Testimonial 2">
+                        <h3>Jane Doe</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in ultricies est consectetur.</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="img/testimonial-3.jpg" alt="Testimonial 3">
+                        <h3>John Smith</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in ultricies est consectetur.</p>
                     </div>
                 </div>
             </div>
