--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         <div class="row scholarship-slider">
             <div class="col-md-4">
                 <div class="card scholarship-box h-100">
-                    <img src="img/scholarship-1.jpg" class="card-img-top" alt="University of Oxford">
+                    <img src="img/courses-2.jpg" class="card-img-top" alt="University of Oxford">
                     <div class="card-body">
                         <h3 class="card-title"><i class="fas fa-landmark"></i> University of Oxford</h3>
                         <p class="card-text">World-renowned university offering prestigious scholarships for
@@ -573,7 +573,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card scholarship-box h-100">
-                        <img src="img/scholarship-2.jpg" class="card-img-top" alt="Harvard University">
+                        <img src="img/hero-slide-3.jpg" class="card-img-top" alt="Harvard University">
                         <div class="card-body">
                             <h3 class="card-title"><i class="fas fa-university"></i> Harvard University</h3>
                             <p class="card-text">Ivy League institution with extensive financial aid options for
@@ -587,7 +587,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card scholarship-box h-100">
-                        <img src="img/scholarship-3.jpg" class="card-img-top" alt="Stanford University">
+                        <img src="img/hero-slide-1.jpg" class="card-img-top" alt="Stanford University">
                         <div class="card-body">
                             <h3 class="card-title"><i class="fas fa-graduation-cap"></i> Stanford University</h3>
                             <p class="card-text">Leading research university offering full-ride scholarships to
@@ -608,8 +608,8 @@
         <div class="pb-5">
             <div class="row g-4 align-items-end">
                 <div class="col-xl-8">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Latest Blog</h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s"> </h1>
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Latest Blogs </h1>
                 </div>
                 <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
                     <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="blog.html">
@@ -743,7 +743,8 @@
                                             city to live in
                                             Australia. I am always thankful to the consultancy to help to get one step
                                             forward to my
-                                            career(dream).”</p>
+                                            career(dream).”
+                                        </p>
                                         <h4>Australia</h4>
                                     </div>
                                 </div>
@@ -757,90 +758,89 @@
     <!--- end -->
 
     <!-- Training Start -->
-    <div class="container-fluid training py-5">
-        <div class="pb-5">
-            <div class="row g-4 align-items-end">
-                <div class="col-xl-8">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events
-                    </h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Orientations, Career Speech & More  </h1>
-                </div>
-            </div>
-        </div>
-        <div class="container py-5">
-            <div class="training-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="training-img rounded-top">
-                        <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
-                            style="top: 0; left: 0;">01</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Chandigarh Univesity</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
-                            blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="training-img rounded-top">
-                        <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
-                            style="top: 0; left: 0;">02</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
-                            blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="training-img rounded-top">
-                        <img src="img/blog-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
-                            style="top: 0; left: 0;">03</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Convenient Dancing</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
-                            blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="training-img rounded-top">
-                        <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
-                            style="top: 0; left: 0;">04</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Dance Theater</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
-                            blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.9s">
-                    <div class="training-img rounded-top">
-                        <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
-                            style="top: 0; left: 0;">05</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
-                            blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+    <section id="events" class="padd-section"> 
+        <div class="container-fluid training py-5">
+            <div class="pb-5">
+                <div class="row g-4 align-items-end">
+                    <div class="col-xl-8">
+                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events
+                        </h4>
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Orientations, Career Speech & More  </h1>
                     </div>
                 </div>
             </div>
+            <div class="container py-5">
+                <div class="training-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="training-img rounded-top">
+                            <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
+                                style="top: 0; left: 0;">01</h1>
+                        </div>
+                        <div class="rounded-bottom border border-top-0 p-4">
+                            <a href="#" class="h4 mb-3 d-block">Chandigarh Univesity</a>
+                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
+                                blanditiis quidem</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="training-img rounded-top">
+                            <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
+                                style="top: 0; left: 0;">02</h1>
+                        </div>
+                        <div class="rounded-bottom border border-top-0 p-4">
+                            <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
+                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
+                                blanditiis quidem</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="training-img rounded-top">
+                            <img src="img/blog-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
+                                style="top: 0; left: 0;">03</h1>
+                        </div>
+                        <div class="rounded-bottom border border-top-0 p-4">
+                            <a href="#" class="h4 mb-3 d-block">Convenient Dancing</a>
+                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
+                                blanditiis quidem</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="training-img rounded-top">
+                            <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
+                                style="top: 0; left: 0;">04</h1>
+                        </div>
+                        <div class="rounded-bottom border border-top-0 p-4">
+                            <a href="#" class="h4 mb-3 d-block">Dance Theater</a>
+                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
+                                blanditiis quidem</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.9s">
+                        <div class="training-img rounded-top">
+                            <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute"
+                                style="top: 0; left: 0;">05</h1>
+                        </div>
+                        <div class="rounded-bottom border border-top-0 p-4">
+                            <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
+                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi
+                                blanditiis quidem</p>
+                            <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
     <!-- Training End -->
-
-    
-
 
     <!-- Footer -->
     <!-- Footer Start -->
@@ -955,6 +955,7 @@
     </section>
 
     <!-- Modal -->
+    <!---
     <section id="chatbox" class="ai">
         <input type="checkbox" id="click">
         <label for="click">
@@ -992,7 +993,7 @@
                                     <div class="questions container"></div>
                                 </div>
 
-                                <!-- Footer Start --->
+                                Footer Start 
                                 <div class="footer-modal">
                                     <form id="chat-form">
                                         <input type="text" class="chat-input" required>
@@ -1007,12 +1008,15 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>-
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </section>
+    ---->
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
