--- a/service.html
+++ b/service.html
@@ -224,9 +224,8 @@
             </div>
         </div>
     </div>
-
-
-
+    </div>
+    <!--- Services Ends--->
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="container mt-5 pt-5">
