--- a/index.html
+++ b/index.html
@@ -533,69 +533,53 @@
     </section>
 
     <div class="faq-container">
-        <div class="main-faq">
+        <div class="faq-menu">
             FAQ's
         </div>
-        <div class="box">
+        <div class="faq-box">
             <div class="faq-header">
-                They can literally save your life
+                What is the eligibility test?
             </div>
             <div class="faq-content">
-                Cats have a reputation of being aloof and not caring about their humans, but they have saved countless
-                lives over the years. One cat in the United Kingdom warns her human when he’s about to have an epileptic
-                seizure, while a cat in Montana woke up its two humans when a gas pipe started leaking. Firefighters
-                told the couple that the house could easily have exploded if not for cat’s intervention.
+                The eligibility test is a test that helps us know your best interest and helps you apply for the best
+                universities.
 
-                One cat has even received the highest medal available to military animals. Simon the cat was onboard the
-                HMS Amethyst, which was sailing up the Yangtze in 1949 when a shell hit the ship, killing several
-                marines and severely injuring Simon. (The event marked the beginning of the 101-day siege of the ship,
-                which would become known as the Yangtze Incident.) Simon was fixed up, and despite being injured,
-                performed his ship duty and started catching the rats that were threatening the ship’s food supply, as
-                well as providing moral support for the surviving sailors. Simon died not long after the ship returned
-                to the UK, but he was posthumously awarded the UK’s Dickin Medal, recognized as the animal Victoria
-                Cross, for "behaviour [of] the highest order, although the blast was capable of making a hole over a
-                foot in diameter in a steel plate."
+                Your test will examined by our professionals and you will be given the best universities that match your
+                criteria in your email box.
             </div>
         </div>
         <div class="faq-box">
             <div class="faq-header">
-                It's better for environment
+                How many scholarships are available?
             </div>
             <div class="faq-content">
-                If you're worried about your carbon footprint, it’s better to own a cat than a dog. A 2009 study found
-                that the resources needed to feed a dog over the course of its life create the same eco-footprint as
-                that of a Land Cruiser. Meanwhile, cats—which eat less in general and are more likely to eat fish than
-                corn- or beef-flavored products—only have the approximate carbon footprint of a small hatchback.
+                We have scholarships available for students from all over the world.
+                <br>
+                Check out our scholarship page for more information.
             </div>
         </div>
         <div class="faq-box">
             <div class="faq-header">
-                Companionship
+                How can I apply for a scholarship?
             </div>
             <div class="faq-content">
-                The stereotype that dogs are more affectionate than cats is just that: a stereotype. In fact, it turns
-                out that cats can be just as good of companions as dogs, especially for women. An Austrian study
-                conducted in 2003 found that having a cat in the house is the emotional equivalent of having a romantic
-                partner. As well as initiating contact much of the time, studies have shown cats will remember kindness
-                shown to them and return the favor later.
-
-                But cats really do have the upper hand in these relationships. After thousands of years of
-                domestication, cats have learned how to make a half purr/half howl noise that sounds remarkably like a
-                human baby’s cry. And since our brains are programmed to respond to our children’s distress, it is
-                almost impossible to ignore what a cat wants when it demands it like that.
+                Applying for a scholarship is simple and easy.
+                <br>
+                Fill out the application form on our scholarship page.
+                <br>
+                Check your email box for confirmation and payment instructions.
             </div>
         </div>
         <div class="faq-box">
             <div class="faq-header">
-                Literally everything 😝
+                Can I apply for multiple scholarships?
             </div>
             <div class="faq-content">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum.
+                Yes, you can apply for multiple scholarships.
+                <br>
+                Just fill out the application form for each scholarship you want to apply for.
+                <br>
+                Check your email box for confirmation and payment instructions.
             </div>
         </div>
     </div>
